文件上传联调

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=12345
 
-wechat.filePath = "D://temp/wechat/"
-wechat.prikeyurl = "http://12.0.0.1:12345/key/prikey"
+wechat.filePath=D://tmp/wechat/
+wechat.prikeyurl=http://12.0.0.1:12345/key/prikey
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=1000MB
